@@ -35,6 +35,7 @@ SYNC_ITEM_MEDIA     = 5
 SYNC_ITEM_NOTES     = 6
 SYNC_ITEM_TASKS     = 7
 SYNC_ITEM_AVANTGO   = 8
+SYNC_ITEM_WORLDMATE = 9
 
 CHANGE_ADDED        = 1
 CHANGE_MODIFIED     = 4
@@ -50,6 +51,7 @@ SYNC_ITEMS = {
     SYNC_ITEM_NOTES     : ("Notes", True),
     SYNC_ITEM_TASKS     : ("Tasks", False),
     SYNC_ITEM_AVANTGO   : ("AvantGo", True),
+    SYNC_ITEM_WORLDMATE : ("WorldMate", False)
 }
 
 SYNC_ITEM_CLASS_TO_ID = {
@@ -77,6 +79,8 @@ GUID_WM5_ITEM_MEDIA     = "{A38DEEBF-C535-D8E2-AE24-8AE61845CF82}"
 GUID_WM5_ITEM_NOTES     = "{8E98CB51-85A4-4777-8DEB-A0298DF8899F}"
 GUID_WM5_ITEM_TASKS     = "{783AE4F6-4C12-4423-8270-66361260D4F1}"
 GUID_WM5_ITEM_AVANTGO   = "{BEA275EB-E3B7-641F-3D77-752349BAAA63}"
+GUID_WM5_ITEM_WORLDMATE = "{89768ABD-D173-18E3-16EC-98034F67B775}"
+
 
 SYNC_ITEM_ID_FROM_GUID = {
     GUID_WM5_ITEM_CALENDAR  : SYNC_ITEM_CALENDAR,
@@ -88,6 +92,7 @@ SYNC_ITEM_ID_FROM_GUID = {
     GUID_WM5_ITEM_NOTES     : SYNC_ITEM_NOTES,
     GUID_WM5_ITEM_TASKS     : SYNC_ITEM_TASKS,
     GUID_WM5_ITEM_AVANTGO   : SYNC_ITEM_AVANTGO,
+    GUID_WM5_ITEM_WORLDMATE : SYNC_ITEM_WORLDMATE
 }
 
 SYNC_ITEM_ID_TO_GUID = {
@@ -100,6 +105,7 @@ SYNC_ITEM_ID_TO_GUID = {
     SYNC_ITEM_NOTES     : GUID_WM5_ITEM_NOTES,
     SYNC_ITEM_TASKS     : GUID_WM5_ITEM_TASKS,
     SYNC_ITEM_AVANTGO   : GUID_WM5_ITEM_AVANTGO,
+    SYNC_ITEM_WORLDMATE : GUID_WM5_ITEM_WORLDMATE
 }
 
 #
@@ -107,9 +113,6 @@ SYNC_ITEM_ID_TO_GUID = {
 
 DIR_TO_AIRSYNC = 0
 DIR_FROM_AIRSYNC = 1
-
-FMT_TO_AIRSYNC   = 1
-FMT_FROM_AIRSYNC = 2
 
 REMSYNC_PORT = 999
 RRA_PORT     = 5678
